@@ -24,6 +24,11 @@ Thanks to Gerd Knops for contributing to this release.
 - 'scriptPath' BeanShell variable is set to the macro file path while a
   macro or startup script is executing.
 
+- Startup scripts can now be written in any language supported by a
+  registered macro handler; so you can put Python scripts in the
+  'startup' directory if you have the JythonInterpreter plugin
+  installed, for example.
+
 - Fixed default install path settings in installer when running on Unix.
   Now, instead of checking for a user name of "root", it checks if the
   appropriate subdirectories of /usr/local are writable.
